--- a/_clean_sass/index.html
+++ b/_clean_sass/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Образовательный портал ProKurs</title>
-	<meta content="" name="description" />
+	<meta content="ProKurs learning platform" name="description" />
 	<link rel="shortcut icon" href="favicon.png" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
